[package]
name = "dotplotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.1", features = ["cargo"]}

chrono = "0.4.19"
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"

image = "0.24.5"
imageproc = "0.23.0"
num-traits = "0.2.15"
rusttype = "0.9.3"
conv = "0.3.3"
