[package]
name = "dotplotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["cargo"] }

chrono = "0.4.42"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.28"

ab_glyph = "0.2.31"
image = "0.25.6"
imageproc = "0.25.0"
num-traits = "0.2.15"
rusttype = "0.9.3"
conv = "0.3.3"
